--- a/styles/main.css
+++ b/styles/main.css
@@ -51,6 +51,8 @@
   width: 45vw;
   margin-left: 50%;
   margin-top: -25%;
+  -webkit-box-shadow: 5px 10px #888888;
+          box-shadow: 5px 10px #888888;
 }
 
 #belanglo {
@@ -82,6 +84,8 @@
   width: 25vw;
   margin-left: 45%;
   margin-top: -24%;
+  -webkit-box-shadow: 5px 10px #888888;
+          box-shadow: 5px 10px #888888;
 }
 
 #newnes {
@@ -113,6 +117,8 @@
   width: 45vw;
   margin-left: 45%;
   margin-top: -30%;
+  -webkit-box-shadow: 5px 10px #888888;
+          box-shadow: 5px 10px #888888;
 }
 
 #jenolan {
@@ -145,6 +151,8 @@
   width: 40vw;
   margin-left: 45%;
   margin-top: -20%;
+  -webkit-box-shadow: 5px 10px #888888;
+          box-shadow: 5px 10px #888888;
 }
 
 #stockton {
@@ -176,6 +184,8 @@
   width: 45vw;
   margin-left: 45%;
   margin-top: -25%;
+  -webkit-box-shadow: 5px 10px #888888;
+          box-shadow: 5px 10px #888888;
 }
 
 @media only screen and (max-width: 1024px) {
