--- a/styles/page.scss
+++ b/styles/page.scss
@@ -43,6 +43,7 @@
                 width: 45vw;
                 margin-left: 50%;
                 margin-top: -25%;
+                box-shadow: 5px 10px #888888;
             }
         }
         
@@ -68,6 +69,7 @@
                 width: 25vw;
                 margin-left: 45%;
                 margin-top: -24%;
+                box-shadow: 5px 10px #888888;
             }
         }
         
@@ -93,6 +95,7 @@
                 width: 45vw;
                 margin-left: 45%;
                 margin-top: -30%;
+                box-shadow: 5px 10px #888888;
             }
         }
         
@@ -119,6 +122,7 @@
                 width: 40vw;
                 margin-left: 45%;
                 margin-top: -20%;
+                box-shadow: 5px 10px #888888;
             }
         }
         
@@ -144,6 +148,7 @@
                 width: 45vw;
                 margin-left: 45%;
                 margin-top: -25%;
+                box-shadow: 5px 10px #888888;
             }
         }
         
